<resources>
    <string name="app_name">TestEmptyActivity</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="app_description">This app shows an example of controls and visuals from Android studio.</string>
    <string name="text_textPassword">Text Password</string>
    <string name="text_numPassword">Number Password</string>
    <string name="text_textEmail">Email Input</string>
    <string name="text_textPhone">Phone Input</string>
    <string name="text_textAddress">Address Input</string>
    <string name="text_number">Number Input</string>
    <string name="text_decimal">Decimal Input</string>
    <string name="text_buttonsActivity">This page shows different button like controls.</string>
</resources>